src/test/ui/issues/issue-28433.stderr
error: unnecessary visibility qualifier
  --> $DIR/issue-28433.rs:2:5
   |
LL |     pub Duck,
   |     ^^^ `pub` not permitted here

error: unnecessary visibility qualifier
  --> $DIR/issue-28433.rs:5:5
   |
LL |     pub(crate) Dove
   |     ^^^^^^^^^^ `pub` not permitted here

error: aborting due to 2 previous errors

